src/app/app.scss
// http://ionicframework.com/docs/theming/

// App Global Sass
// --------------------------------------------------
// Put style rules here that you want to apply globally. These
// styles are for the entire app and not just one component.
// Additionally, this file can be also used as an entry point
// to import other Sass files to be included in the output CSS.
//
// Shared Sass variables, which can be used to adjust Ionic's
// default Sass variables, belong in "theme/variables.scss".
//
// To declare rules for a specific mode, create a child rule
// for the .md, .ios, or .wp mode classes. The mode class is
// automatically applied to the <body> element in the app.

button[ion-button].chess-button {
  background: #d0b085;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 14px;

  &:hover {
    background: #937c5e;
  }
}

.circle-button {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 50px;
  width: 50px;
  border-radius: 25px;
  background: white;
  font-size: 24px;
}

* {
  font-family: Roboto, "Helvetica Neue", sans-serif;
}

.button-container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 100%;
  padding: 10px;
}

ion-backdrop {
  visibility: visible !important;
}

.grid {
  max-width: 800px;
  text-align: center;

  .header-row .col {
    background: #d0b085;
    font-weight: 500;
    font-size: 20px;
    color: #fff;
    border: none;
  }

  .col {
    background: #fff;
    color: #000;
    border: 1px solid #ebebeb;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    font-size: 16px;
  }
}

button.exit-button {
  position: absolute;
  top: 20px;
  height: 32px;
  width: 60px;
  font-size: 14px;
  font-weight: 500;
  text-transform: uppercase;
  background: #d0b085;
  color: white;
  border-radius: 0 5px 5px 0;
  z-index: 999; // doesn't matter does it?
}

@font-face {
  font-family: 'ChessAlpha';
  src: url('chessalpha.eot');
    src: url('chessalpha.eot?#iefix') format('embedded-opentype'),
         url('chessalpha.woff2') format('woff2'),
         url('chessalpha.woff') format('woff'),
         url('chessalpha.ttf') format('truetype'),
         url('chessalpha.svg#chess_alpha_2book') format('svg');
  font-weight: normal;
  font-style: normal;
}

//// OVERRIDES

.bar-button-default-ios, .bar-button-default.bar-button-ios-default, .bar-button-clear-ios-default {
  color: #424242;
  background-color: transparent;
}

.back-button-icon-ios {
  font-size: 2.4rem;
}

//// MEDIA QUERIES
@media screen and (max-width: 360px) {
  .chessboard {
    width: 266px !important;
    height: 384px !important;
  }
  .board-space {
    width: 64px !important;
    height: 64px !important;
    font-size: 40px !important;
  }
  .name-container {
    width: 266px !important;

    &.top {
      margin-top: 10px;
    }
  }
  button.exit-button {
    top: 15px;
  }
}
@media screen and (min-width: 360px) and (max-width: 400px) {
  .chessboard {
    width: 290px !important;
    height: 408px !important;
  }
  .board-space {
    width: 70px !important;
    height: 70px !important;
    font-size: 40px !important;
  }
  .name-container {
    width: 290px !important;
  }
}
@media screen and (min-width: 400px) and (max-width: 450px) {
  .chessboard {
    width: 330px !important;
    height: 448px !important;
  }
  .board-space {
    width: 80px !important;
    height: 80px !important;
    font-size: 40px !important;
  }
  .name-container {
    width: 330px !important;
  }
}

